@@ -28,8 +28,8 @@ static const uint8_t gfxTokens[] PROGMEM = {
 	'C','I','R','C','L','E', ASCII_NUL,
 	'C','O','L','O','R', ASCII_NUL,
 	'C','U','R','S','O','R', ASCII_NUL,
-	'L','I','N','E', ASCII_NUL,
 	'L','I','N','E','T','O', ASCII_NUL,
+	'L','I','N','E', ASCII_NUL,
 	'P','O','I','N','T', ASCII_NUL,
 	'S','C','R','E','E','N', ASCII_NUL,
 	 ASCII_ETX
@@ -40,8 +40,8 @@ const FunctionBlock::function GFXModule::comms[] PROGMEM = {
 	GFXModule::command_circle,
 	GFXModule::command_color,
 	GFXModule::command_cursor,
-	GFXModule::command_line,
 	GFXModule::command_lineto,
+	GFXModule::command_line,
 	GFXModule::command_point,
 	GFXModule::command_screen
 };
