@@ -10,9 +10,18 @@ SRC_PATH=${SKETCH}/terminalbasic
 rm -rf $SRC_PATH
 
 SRC="	./libbasic/include/basic.h
-	./libbasic/include/basic_config.h
+	./libbasic/src/basic.c
+	./libbasic/include/tools.h
+	./libbasic/src/tools.c
+	./libbasic/include/config.h
 	./libbasic/include/_tokens_en.h
 	./libbasic/include/_tokens_ru.h
+	./libbasic/src/basic_lexer_en.c \
+	./libbasic/src/basic_lexer_ru.c \
+	./libbasic/include/basic_value.h \
+	./libbasic/src/basic_value.c \
+	./libbasic/include/basic_lexer.h \
+	./libbasic/src/basic_lexer.c \
 	./BASIC/include/basic.hpp  \
 	./BASIC/src/basic.cpp \
 	./BASIC/include/basic_lexer.hpp  \
